add list run endpoint
