# internal/http/handlers/run_handler.go
@@ -2,11 +2,13 @@ package handlers
 
 import (
 	"log/slog"
+	"net/http"
 
 	"github.com/google/uuid"
 	"github.com/labstack/echo/v4"
 
 	"github.com/inquiryproj/inquiry/internal/app"
+	httpInternal "github.com/inquiryproj/inquiry/internal/http"
 	"github.com/inquiryproj/inquiry/internal/service"
 )
 
@@ -31,4 +33,35 @@ func (h *RunHandler) RunProject(ctx echo.Context, id uuid.UUID) error {
 		ProjectID: id,
 	})
 	return err
+}
+
+// GetRunsForProject returns runs for a given project.
+func (h *RunHandler) GetRunsForProject(ctx echo.Context, id uuid.UUID, params httpInternal.GetRunsForProjectParams) error {
+	getRunsForProjectRequest := &app.GetRunsForProjectRequest{
+		Limit:     100,
+		Offset:    0,
+		ProjectID: id,
+	}
+	if params.Limit != nil {
+		getRunsForProjectRequest.Limit = *params.Limit
+	}
+	if params.Offset != nil {
+		getRunsForProjectRequest.Offset = *params.Offset
+	}
+	runs, err := h.runnerService.GetRunsForProject(ctx.Request().Context(), getRunsForProjectRequest)
+	if err != nil {
+		return err
+	}
+
+	result := make([]httpInternal.ProjectRunOutput, len(runs.Runs))
+	for i, run := range runs.Runs {
+		result[i] = httpInternal.ProjectRunOutput{
+			ID:        run.ID,
+			ProjectID: run.ProjectID,
+			Success:   run.Success,
+			State:     httpInternal.ProjectRunOutputState(run.State),
+		}
+	}
+
+	return ctx.JSON(http.StatusOK, result)
 }
